[package]
name = "system76-oled"
description = "Control brightness on OLED displays"
version = "0.1.3"
repository = "https://github.com/pop-os/system76-oled"
license = "LGPL-3.0-or-later"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
inotify = { version = "0.7.0", default-features = false }
libc = "0.2.60"
log = { version = "0.4.7", features = ["release_max_level_debug"] }
x11 = { version = "2.18.1", features = ["xlib", "xrandr"] }
