[package]
name = "system76-oled"
description = "Control brightness on OLED displays"
version = "0.1.4"
repository = "https://github.com/pop-os/system76-oled"
license = "LGPL-3.0-or-later"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2018"

[dependencies]
dbus = "0.9.6"
env_logger = "0.9.0"
inotify = { version = "0.10.0", default-features = false }
libc = "0.2.131"
log = { version = "0.4.17", features = ["release_max_level_debug"] }
x11 = { version = "2.20.0", features = ["xlib", "xrandr"] }
